--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,3 +1,33 @@
-<h1 class="mt-4">Dashboard</h1>
+<!-- <h1 class="mt-4">Dashboard</h1>
 <p class="lead mb-3">Welcome <%= user.name %></p>
-<a href="/users/logout" class="btn btn-secondary">Logout</a>
+<a href="/users/logout" class="btn btn-secondary">Logout</a> -->
+
+
+
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Dashboard</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
+<body>
+		<button id="signout_button" style="position: absolute; top: 10px; right: 10px;" class="btn btn-danger log_position" onclick="window.location.href='/users/logout'">Sign Out</button>
+		<h1 style="text-align: center;">Dashboard</h1>
+		<br>	
+		<p class="lead mb-3">Welcome <%= user.name %></p>
+		<button type="button" class="btn btn-secondary btn-lg btn-block">Trusted Neighbours</button>	
+		<br>	
+		<button type="button" class="btn btn-secondary btn-lg btn-block">Contact Neighbours</button>
+		<br>	
+		<button type="button" class="btn btn-secondary btn-lg btn-block">Reach Home</button>	
+		<br>	
+		<button type="button" class="btn btn-secondary btn-lg btn-block">Emergency</button>	
+		<br>	
+
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
+</html>
